--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tirumala TVS Bidarahalli | Authorized Dealer</title>
+    <title>Tirumala TVS | Bidarahalli</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
     <div class="top-bar">
-        <span>📍 Bidarahalli, Bangalore - 49</span>
+        <span>📍 Bidarahalli, Bangalore</span>
         <span>📞 +91 99649 46512</span>
     </div>
 
@@ -18,87 +18,96 @@
             <a href="index.html" class="logo">
                 <h1>Tirumala <span>TVS</span></h1>
             </a>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="model.html">All Models</a></li>
-                <li><a href="contacts.html">Contact Us</a></li>
-                <li><a href="contacts.html" class="btn-book">Book Service</a></li>
+
+            <ul class="nav-menu">
+                <li><a href="index.html" style="color: var(--tvs-red);">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="models.html">Motorcycles</a></li>
+                <li><a href="models.html">Scooters</a></li>
+                <li><a href="models.html">Mopeds</a></li>
+                <li><a href="models.html">Electric</a></li>
+                <li><a href="contacts.html">Services</a></li>
             </ul>
         </div>
     </header>
 
     <section class="hero">
         <h2>Welcome to Tirumala TVS</h2>
-        <p>Your Trusted TVS Partner in Bidarahalli, Bangalore.</p>
-        <a href="model.html" class="hero-btn">Explore Bikes</a>
+        <p>Your Trusted Dealership in Bidarahalli</p>
+        
+        <div class="hero-buttons">
+            <a href="models.html" class="btn-primary">View Sales / Bikes</a>
+            <a href="contacts.html" class="btn-secondary">Book Service</a>
+        </div>
     </section>
 
-    <h2 class="section-title">Popular Models</h2>
-    <div class="models-grid">
-        <div class="model-card">
-            <img src="https://placehold.co/600x400?text=TVS+Jupiter+125" alt="TVS Jupiter">
-            <div class="model-info">
-                <h3>TVS Jupiter 125</h3>
-                <p>Zyada Se Bhi Zyada. The ultimate family scooter.</p>
-                <a href="model.html" class="btn-outline">View Details</a>
-            </div>
-        </div>
+    <section class="category-section">
+        <h2 style="color: var(--tvs-blue); margin-bottom: 10px;">Find Your Ride</h2>
+        <p>Explore our wide range of two-wheelers</p>
 
-        <div class="model-card">
-            <img src="https://placehold.co/600x400?text=TVS+Apache+RTR" alt="TVS Apache">
-            <div class="model-info">
-                <h3>TVS Apache RTR Series</h3>
-                <p>Racing DNA Unleashed. Pure Performance.</p>
-                <a href="model.html" class="btn-outline">View Details</a>
-            </div>
-        </div>
+        <div class="cat-grid">
+            <a href="models.html" class="cat-card">
+                <h3>🏍 Motorcycles</h3>
+                <p>Apache, Raider, Radeon</p>
+            </a>
 
-        <div class="model-card">
-            <img src="https://placehold.co/600x400?text=TVS+Ntorq+125" alt="TVS Ntorq">
-            <div class="model-info">
-                <h3>TVS Ntorq 125</h3>
-                <p>India's First Bluetooth Connected Scooter.</p>
-                <a href="model.html" class="btn-outline">View Details</a>
-            </div>
-        </div>
-    </div>
+            <a href="models.html" class="cat-card">
+                <h3>🛵 Scooters</h3>
+                <p>Jupiter, Ntorq, Zest</p>
+            </a>
 
-    <section style="background-color: var(--tvs-blue); color: white; padding: 40px 5%; text-align: center; margin-top: 20px;">
-        <h2>Why Choose Tirumala TVS?</h2>
-        <div style="display: flex; justify-content: space-around; flex-wrap: wrap; margin-top: 30px;">
-            <div style="flex: 1; min-width: 250px; margin: 10px;">
-                <h3>🛠 Authorized Service</h3>
-                <p>Expert mechanics and genuine parts.</p>
-            </div>
-            <div style="flex: 1; min-width: 250px; margin: 10px;">
-                <h3>💰 Best Finance Options</h3>
-                <p>Low EMI and quick loan approvals.</p>
-            </div>
-            <div style="flex: 1; min-width: 250px; margin: 10px;">
-                <h3>🏍 Wide Range</h3>
-                <p>All TVS scooters, bikes, and mopeds available.</p>
-            </div>
+            <a href="models.html" class="cat-card">
+                <h3>📦 Mopeds</h3>
+                <p>XL100 Heavy Duty</p>
+            </a>
+
+            <a href="models.html" class="cat-card">
+                <h3>⚡ Electric</h3>
+                <p>TVS iQube EV</p>
+            </a>
         </div>
+    </section>
+
+    <section id="about" style="background: white; padding: 50px 5%; text-align: center;">
+        <h2 style="color: var(--tvs-blue);">About Tirumala TVS</h2>
+        <p style="max-width: 700px; margin: 20px auto; color: #555;">
+            We are the authorized TVS Motor Company dealership in Bidarahalli, Bangalore. 
+            We provide the full range of TVS two-wheelers, genuine spare parts, and expert service.
+            Customer satisfaction is our priority.
+        </p>
     </section>
 
     <footer>
-        <div class="footer-content">
-            <div class="footer-section">
+        <div class="footer-grid">
+            <div class="footer-col">
                 <h4>Tirumala TVS</h4>
-                <p>Bidarahalli, Bangalore – 560049</p>
-                <p>Near Main Bus Stop</p>
+                <p>No. 123, Main Road,</p>
+                <p>Bidarahalli, Bangalore - 560049</p>
+                <br>
+                <p>📞 +91 99649 46512</p>
             </div>
-            <div class="footer-section">
-                <h4>Contact</h4>
-                <p>Phone: +91 99649 46512</p>
-                <p>Email: tirumalatvs716@gmail.com</p>
-            </div>
-            <div class="footer-section">
+
+            <div class="footer-col">
                 <h4>Quick Links</h4>
-                <p><a href="model.html">Models</a></p>
-                <p><a href="contacts.html">Book Service</a></p>
+                <ul>
+                    <li><a href="#about">About Us</a></li>
+                    <li><a href="contacts.html">Contact Us</a></li>
+                    <li><a href="contacts.html">Book Service Appointment</a></li>
+                    <li><a href="contacts.html">Book a Test Drive</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-col">
+                <h4>Our Models</h4>
+                <ul>
+                    <li><a href="models.html">Apache Series</a></li>
+                    <li><a href="models.html">Jupiter 125</a></li>
+                    <li><a href="models.html">Ntorq 125</a></li>
+                    <li><a href="models.html">iQube Electric</a></li>
+                </ul>
             </div>
         </div>
+
         <div class="footer-bottom">
             <p>&copy; 2024 Tirumala TVS Bidarahalli. All Rights Reserved.</p>
         </div>
