--- a/index.html
+++ b/index.html
@@ -3,90 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tirumala TVS | Bidarahalli</title>
+    <title>Tirumala TVS - Bidarahalli</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-    <div class="top-bar">
-        <span>📍 Bidarahalli, Bangalore</span>
-        <span>📞 +91 99649 46512</span>
-    </div>
-
     <header>
-        <div class="nav-container">
+        <div class="top-actions">
+            <a href="contacts.html" class="action-btn">Book Service Appointment</a>
+            <a href="contacts.html" class="action-btn">Get Quotation</a>
+            <a href="contacts.html" class="action-btn">Book Test Drive</a>
+        </div>
+
+        <div class="main-nav">
             <a href="index.html" class="logo">
-                <h1>Tirumala <span>TVS</span></h1>
+                <div class="logo-text">Tirumala <span style="color: var(--tvs-blue);">TVS</span></div>
             </a>
 
             <ul class="nav-menu">
-                <li><a href="index.html" style="color: var(--tvs-red);">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="models.html">Motorcycles</a></li>
-                <li><a href="models.html">Scooters</a></li>
-                <li><a href="models.html">Mopeds</a></li>
-                <li><a href="models.html">Electric</a></li>
-                <li><a href="contacts.html">Services</a></li>
+                <li><a href="index.html" style="color: var(--tvs-blue);">HOME ↗</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="models.html">MOTORCYCLES</a></li>
+                <li><a href="models.html">SCOOTERS</a></li>
+                <li><a href="models.html">MOPEDS</a></li>
+                <li><a href="models.html">ELECTRIC</a></li>
+                <li><a href="contacts.html">SERVICES</a></li>
             </ul>
         </div>
     </header>
-
-    <section class="hero">
-        <h2>Welcome to Tirumala TVS</h2>
-        <p>Your Trusted Dealership in Bidarahalli</p>
-        
-        <div class="hero-buttons">
-            <a href="models.html" class="btn-primary">View Sales / Bikes</a>
-            <a href="contacts.html" class="btn-secondary">Book Service</a>
+    <section class="hero-banner placeholder">
+        <div>
+            <h1>TVS RONIN</h1>
+            <p>The Ultimate Modern-Retro | Start Unscripted</p>
+            <br>
+            <a href="contacts.html" class="action-btn" style="background: var(--tvs-red);">Book Now</a>
         </div>
     </section>
 
-    <section class="category-section">
-        <h2 style="color: var(--tvs-blue); margin-bottom: 10px;">Find Your Ride</h2>
-        <p>Explore our wide range of two-wheelers</p>
-
-        <div class="cat-grid">
-            <a href="models.html" class="cat-card">
-                <h3>🏍 Motorcycles</h3>
-                <p>Apache, Raider, Radeon</p>
-            </a>
-
-            <a href="models.html" class="cat-card">
-                <h3>🛵 Scooters</h3>
-                <p>Jupiter, Ntorq, Zest</p>
-            </a>
-
-            <a href="models.html" class="cat-card">
-                <h3>📦 Mopeds</h3>
-                <p>XL100 Heavy Duty</p>
-            </a>
-
-            <a href="models.html" class="cat-card">
-                <h3>⚡ Electric</h3>
-                <p>TVS iQube EV</p>
-            </a>
+    <section class="section-container">
+        <h2 class="section-title">Achievements</h2>
+        <div class="grid-3">
+            <div class="card">
+                <h3>🏆 Great Place to Work</h3>
+                <p>Certified for Jan 2025 - Jan 2026.</p>
+            </div>
+            <div class="card">
+                <h3>🏍 Bike of the Year</h3>
+                <p>TVS Raider 125 - Commuter of the year.</p>
+            </div>
+            <div class="card">
+                <h3>⭐ JD Power Award</h3>
+                <p>Highest Customer Satisfaction.</p>
+            </div>
         </div>
     </section>
 
-    <section id="about" style="background: white; padding: 50px 5%; text-align: center;">
-        <h2 style="color: var(--tvs-blue);">About Tirumala TVS</h2>
-        <p style="max-width: 700px; margin: 20px auto; color: #555;">
-            We are the authorized TVS Motor Company dealership in Bidarahalli, Bangalore. 
-            We provide the full range of TVS two-wheelers, genuine spare parts, and expert service.
-            Customer satisfaction is our priority.
+    <section id="about" class="section-container" style="background: #f9f9f9;">
+        <h2 class="section-title">About Tirumala TVS</h2>
+        <p style="max-width: 800px; margin: 0 auto; line-height: 1.8;">
+            We are the premier TVS dealership in Bidarahalli, Bangalore. 
+            From the rugged XL100 to the racing DNA of the Apache series, 
+            we bring you the best of TVS engineering combined with world-class service.
         </p>
     </section>
 
     <footer>
-        <div class="footer-grid">
-            <div class="footer-col">
-                <h4>Tirumala TVS</h4>
-                <p>No. 123, Main Road,</p>
-                <p>Bidarahalli, Bangalore - 560049</p>
-                <br>
-                <p>📞 +91 99649 46512</p>
+        <div class="footer-blue-bar">
+            <div class="contact-item">
+                <span>✉</span>
+                tirumalatvs716@gmail.com
             </div>
+            <div class="contact-item">
+                <span>📞</span>
+                +91 99649 46512
+            </div>
+        </div>
 
+        <div class="footer-links">
             <div class="footer-col">
                 <h4>Quick Links</h4>
                 <ul>
@@ -98,20 +91,26 @@
             </div>
 
             <div class="footer-col">
-                <h4>Our Models</h4>
+                <h4>Models</h4>
                 <ul>
-                    <li><a href="models.html">Apache Series</a></li>
-                    <li><a href="models.html">Jupiter 125</a></li>
-                    <li><a href="models.html">Ntorq 125</a></li>
-                    <li><a href="models.html">iQube Electric</a></li>
+                    <li><a href="models.html">Motorcycles</a></li>
+                    <li><a href="models.html">Scooters</a></li>
+                    <li><a href="models.html">Mopeds</a></li>
+                    <li><a href="models.html">Electric</a></li>
                 </ul>
+            </div>
+
+            <div class="footer-col">
+                <h4>Showroom Address</h4>
+                <p>Tirumala TVS</p>
+                <p>Near Main Bus Stop,</p>
+                <p>Bidarahalli, Bangalore - 49</p>
             </div>
         </div>
 
-        <div class="footer-bottom">
-            <p>&copy; 2024 Tirumala TVS Bidarahalli. All Rights Reserved.</p>
+        <div class="copyright">
+            Copyright © 2025 Tirumala TVS. All rights reserved.
         </div>
     </footer>
-
-</body>
+    </body>
 </html>
