--- a/models.html
+++ b/models.html
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>All Models - Tirumala TVS</title>
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        .page-header {
+            background-color: var(--tvs-blue); 
+            color: white; 
+            padding: 60px 5%; 
+            text-align: center;
+        }
+        .category-title {
+            grid-column: 1 / -1;
+            font-size: 1.8rem;
+            color: #333;
+            margin: 40px 0 20px 20px;
+            border-left: 5px solid var(--tvs-red);
+            padding-left: 15px;
+        }
+    </style>
 </head>
 <body>
 
@@ -21,67 +37,112 @@
         </div>
     </header>
 
-    <div style="background-color: var(--tvs-blue); color: white; padding: 40px 5%; text-align: center;">
+    <div class="page-header">
         <h2>Our Vehicle Collection</h2>
-        <p>Choose your perfect ride.</p>
+        <p>Explore the complete range of TVS Motorcycles, Scooters, and Mopeds.</p>
     </div>
 
     <div class="models-grid">
 
+        <h3 class="category-title">Scooters</h3>
+
         <div class="model-card">
-            <img src="https://placehold.co/600x400?text=TVS+XL100" alt="TVS XL100">
+            <img src="https://placehold.co/600x400?text=New+Jupiter+110" alt="TVS Jupiter 110">
             <div class="model-info">
-                <h3>TVS XL100</h3>
-                <p>Heavy Duty. Multi-utility vehicle.</p>
-                <a href="models/xl100.html" class="btn-outline">View Details</a>
+                <h3>TVS Jupiter 110</h3>
+                <p>New 113cc Engine with iGO Assist.</p>
+                <a href="models/jupiter113.html" class="btn-outline">View Details</a>
             </div>
         </div>
 
         <div class="model-card">
-            <img src="https://placehold.co/600x400?text=TVS+Jupiter+125" alt="TVS Jupiter">
+            <img src="https://placehold.co/600x400?text=TVS+Jupiter+125" alt="TVS Jupiter 125">
             <div class="model-info">
                 <h3>TVS Jupiter 125</h3>
-                <p>Zyada Se Bhi Zyada.</p>
+                <p>Zyada Se Bhi Zyada. Largest under-seat storage.</p>
                 <a href="models/jupiter125.html" class="btn-outline">View Details</a>
             </div>
         </div>
 
         <div class="model-card">
+            <img src="https://placehold.co/600x400?text=TVS+Ntorq+125" alt="TVS Ntorq">
+            <div class="model-info">
+                <h3>TVS Ntorq 125</h3>
+                <p>India's First Bluetooth Connected Scooter.</p>
+                <a href="models/ntorq125.html" class="btn-outline">View Details</a>
+            </div>
+        </div>
+
+        <div class="model-card">
+            <img src="https://placehold.co/600x400?text=TVS+Zest+110" alt="TVS Zest">
+            <div class="model-info">
+                <h3>TVS Zest 110</h3>
+                <p>Power and style in a compact package.</p>
+                <a href="models/zest110.html" class="btn-outline">View Details</a>
+            </div>
+        </div>
+
+        <h3 class="category-title">Motorcycles</h3>
+
+        <div class="model-card">
             <img src="https://placehold.co/600x400?text=TVS+Raider" alt="TVS Raider">
             <div class="model-info">
-                <h3>TVS Raider</h3>
-                <p>The Wicked Ride.</p>
+                <h3>TVS Raider 125</h3>
+                <p>The Wicked Ride. Best-in-class sporty commuter.</p>
                 <a href="models/raider.html" class="btn-outline">View Details</a>
             </div>
         </div>
 
         <div class="model-card">
-            <img src="https://placehold.co/600x400?text=TVS+Ntorq" alt="TVS Ntorq">
+            <img src="https://placehold.co/600x400?text=TVS+Ronin" alt="TVS Ronin">
             <div class="model-info">
-                <h3>TVS Ntorq 125</h3>
-                <p>Smart Connect Scooter.</p>
-                <a href="models/ntorq125.html" class="btn-outline">View Details</a>
+                <h3>TVS Ronin</h3>
+                <p>Versatile Modern-Retro Scrambler.</p>
+                <a href="models/ronin.html" class="btn-outline">View Details</a>
+            </div>
+        </div>
+
+        <div class="model-card">
+            <img src="https://placehold.co/600x400?text=TVS+Apache+160" alt="TVS Apache">
+            <div class="model-info">
+                <h3>Apache RTR 160 4V</h3>
+                <p>Racing DNA Unleashed.</p>
+                <a href="models/apache160.html" class="btn-outline">View Details</a>
             </div>
         </div>
 
          <div class="model-card">
-            <img src="https://placehold.co/600x400?text=TVS+Apache+160" alt="Apache 160">
+            <img src="https://placehold.co/600x400?text=TVS+Apache+200" alt="TVS Apache 200">
             <div class="model-info">
-                <h3>Apache RTR 160</h3>
-                <p>Racing DNA.</p>
-                <a href="models/apache160.html" class="btn-outline">View Details</a>
+                <h3>Apache RTR 200 4V</h3>
+                <p>The Ultimate Race Machine.</p>
+                <a href="models/apache200.html" class="btn-outline">View Details</a>
+            </div>
+        </div>
+
+        <h3 class="category-title">Electric & Mopeds</h3>
+
+        <div class="model-card">
+            <img src="https://placehold.co/600x400?text=TVS+iQube+Electric" alt="TVS iQube">
+            <div class="model-info">
+                <h3>TVS iQube Electric</h3>
+                <p>Smart, Silent, Eco-friendly. Up to 145km Range.</p>
+                <a href="models/iqube.html" class="btn-outline">View Details</a>
+            </div>
+        </div>
+
+        <div class="model-card">
+            <img src="https://placehold.co/600x400?text=TVS+XL100" alt="TVS XL100">
+            <div class="model-info">
+                <h3>TVS XL100</h3>
+                <p>Heavy Duty. The Multi-Utility King.</p>
+                <a href="models/xl100.html" class="btn-outline">View Details</a>
             </div>
         </div>
 
     </div>
 
     <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h4>Tirumala TVS</h4>
-                <p>Bidarahalli, Bangalore</p>
-            </div>
-        </div>
         <div class="footer-bottom">
             <p>&copy; 2024 Tirumala TVS Bidarahalli.</p>
         </div>
