--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="models-grid">
             
             <div class="model-card">
-                <img src="assets/jupiter110.jpg" alt="New TVS Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Image+Not+Found'">
+                <img src="assets/jupiter110.jpg" alt="New TVS Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Upload+jupiter110.jpg'">
                 <div class="model-info">
                     <h3>New TVS Jupiter 110</h3>
                     <p>New 113cc Engine with <strong>iGO Assist</strong> technology.</p>
@@ -67,7 +67,7 @@
             </div>
 
             <div class="model-card">
-                <img src="assets/raider.jpg" alt="TVS Raider" onerror="this.src='https://placehold.co/600x400?text=Image+Not+Found'">
+                <img src="assets/raider.jpg" alt="TVS Raider" onerror="this.src='https://placehold.co/600x400?text=Upload+raider.jpg'">
                 <div class="model-info">
                     <h3>TVS Raider iGO</h3>
                     <p>The Wicked Ride with <strong>Boost Mode</strong>.</p>
@@ -76,7 +76,7 @@
             </div>
 
             <div class="model-card">
-                <img src="assets/ronin.jpg" alt="TVS Ronin" onerror="this.src='https://placehold.co/600x400?text=Image+Not+Found'">
+                <img src="assets/ronin.jpg" alt="TVS Ronin" onerror="this.src='https://placehold.co/600x400?text=Upload+ronin.jpg'">
                 <div class="model-info">
                     <h3>TVS Ronin</h3>
                     <p>Modern-Retro Scrambler for the Unscripted life.</p>
