--- a/models/raider.html
+++ b/models/raider.html
@@ -1,138 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>TVS Raider – Price, Specs & Features | Tirumala TVS</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="TVS Raider – Sporty 125cc motorcycle with strong performance, modern features and excellent mileage. Check price, specs and variants at Tirumala TVS." />
-  <link rel="stylesheet" href="../css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TVS Raider 125 - The Wicked Ride</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
+<body style="padding-bottom: 80px;">
 
-<body>
+    <header>
+        <div class="nav-container">
+            <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
+            <nav>
+                <ul class="nav-links">
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../models.html">Inventory</a></li>
+                    <li><a href="../contacts.html">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-<!-- HEADER -->
-<header style="border-bottom:1px solid #e5e7eb;">
-  <div style="max-width:1200px;margin:auto;padding:16px;display:flex;justify-content:space-between;align-items:center;">
-    <h2 style="margin:0;">Tirumala TVS</h2>
-    <nav>
-      <a href="../index.html" style="margin-right:16px;">Home</a>
-      <a href="../models.html" style="margin-right:16px;">Models</a>
-      <a href="../contacts.html">Contact</a>
-    </nav>
-  </div>
-</header>
+    <div class="product-hero">
+        <h2>TVS Raider 125</h2>
+        <p>The Wicked Ride | Commuter of the Year</p>
+    </div>
 
-<!-- HERO -->
-<section style="background:#0b4fd8;color:#fff;">
-  <div style="max-width:1200px;margin:auto;padding:60px 16px;">
-    <h1 style="font-size:42px;margin-bottom:10px;">TVS Raider</h1>
-    <p style="font-size:18px;opacity:0.95;">
-      Sporty commuter motorcycle with performance, comfort and technology
-    </p>
-  </div>
-</section>
+    <section style="text-align: center; padding-bottom: 40px;">
+        <img src="../assets/raider.jpg" alt="TVS Raider" style="max-width: 80%; border-radius: 10px; box-shadow: 0 10px 40px rgba(0,0,0,0.1); margin-top: -50px; background: #fff;">
+        <div style="max-width: 800px; margin: 40px auto 0;">
+            <h3 class="section-title">Wicked Performance</h3>
+            <p style="color: #666; font-size: 1.1rem;">
+                The TVS Raider 125 combines sporty styling with best-in-class performance. 
+                Featuring a distinct "Animalistic" LED headlamp and a reverse LCD digital cluster.
+            </p>
+        </div>
+    </section>
 
-<!-- CONTENT -->
-<main style="max-width:1200px;margin:auto;padding:40px 16px;">
+    <section class="features-section" style="background-color: #f9f9f9;">
+        <h3 class="section-title">Key Features</h3>
+        <div class="features-grid">
+            <div class="feature-card">
+                <span class="feature-icon">🚀</span>
+                <h4>0-60 in 5.9s</h4>
+                <p>Best-in-class acceleration with the 3-valve engine.</p>
+            </div>
+            <div class="feature-card">
+                <span class="feature-icon">📟</span>
+                <h4>Smart Cluster</h4>
+                <p>Reverse LCD digital display with gear shift indicator.</p>
+            </div>
+            <div class="feature-card">
+                <span class="feature-icon">🛑</span>
+                <h4>Mono-shock</h4>
+                <p>5-step adjustable mono-shock suspension for smooth handling.</p>
+            </div>
+            <div class="feature-card">
+                <span class="feature-icon">🔌</span>
+                <h4>USB Charger</h4>
+                <p>On-the-go charging port near the fuel tank.</p>
+            </div>
+        </div>
+    </section>
 
-  <!-- OVERVIEW -->
-  <section style="margin-bottom:40px;">
-    <h2>Overview</h2>
-    <p>
-      TVS Raider is a modern 125cc motorcycle designed for young riders and daily
-      commuters who want a perfect balance of sporty performance, comfort and
-      advanced features. With its aggressive styling, refined engine and premium
-      digital console, Raider stands out in the premium commuter segment.
-    </p>
-  </section>
+    <section class="specs-section">
+        <h3 class="section-title">Technical Specifications</h3>
+        <div class="spec-container">
+            <div class="spec-row"><div class="spec-label">Engine</div><div class="spec-value">124.8 cc, Air & Oil Cooled, 3V</div></div>
+            <div class="spec-row"><div class="spec-label">Power</div><div class="spec-value">11.38 PS @ 7500 rpm</div></div>
+            <div class="spec-row"><div class="spec-label">Torque</div><div class="spec-value">11.2 Nm @ 6000 rpm</div></div>
+            <div class="spec-row"><div class="spec-label">Fuel Tank</div><div class="spec-value">10 Liters</div></div>
+            <div class="spec-row"><div class="spec-label">Weight</div><div class="spec-value">123 kg</div></div>
+            <div class="spec-row"><div class="spec-label">Transmission</div><div class="spec-value">5 Speed Manual</div></div>
+        </div>
+    </section>
 
-  <!-- KEY HIGHLIGHTS -->
-  <section style="margin-bottom:40px;">
-    <h2>Key Highlights</h2>
-    <ul>
-      <li>Powerful and refined 125 cc engine</li>
-      <li>Sporty design with muscular fuel tank</li>
-      <li>Advanced digital instrument cluster</li>
-      <li>Excellent balance of mileage and performance</li>
-      <li>Comfortable riding posture for daily use</li>
-    </ul>
-  </section>
-
-  <!-- ENGINE -->
-  <section style="margin-bottom:40px;">
-    <h2>Engine & Performance</h2>
-    <table style="width:100%;border-collapse:collapse;">
-      <tr><td><strong>Engine</strong></td><td>124.8 cc, air-cooled</td></tr>
-      <tr><td><strong>Power</strong></td><td>Approx. 12.9 PS</td></tr>
-      <tr><td><strong>Torque</strong></td><td>Approx. 11.5 Nm</td></tr>
-      <tr><td><strong>Transmission</strong></td><td>5-speed manual</td></tr>
-      <tr><td><strong>Ride Focus</strong></td><td>Sporty city commuting & highway rides</td></tr>
-    </table>
-  </section>
-
-  <!-- VARIANTS -->
-  <section style="margin-bottom:40px;">
-    <h2>Variants Available</h2>
-    <ul>
-      <li>TVS Raider Drum</li>
-      <li>TVS Raider Disc</li>
-      <li>TVS Raider SmartXonnect</li>
-    </ul>
-  </section>
-
-  <!-- COLOURS -->
-  <section style="margin-bottom:40px;">
-    <h2>Colour Options</h2>
-    <ul>
-      <li>Striking Red</li>
-      <li>Blazing Blue</li>
-      <li>Wicked Black</li>
-      <li>Yellow</li>
-      <li>Silver</li>
-    </ul>
-  </section>
-
-  <!-- PRICE -->
-  <section style="margin-bottom:40px;">
-    <h2>Price (Indicative)</h2>
-    <p>
-      Ex-showroom price in Bengaluru starts from  
-      <strong>₹95,000 (approx.)</strong>
-    </p>
-    <p style="font-size:14px;color:#555;">
-      *Prices may vary depending on variant and offers
-    </p>
-  </section>
-
-  <!-- WHY BUY -->
-  <section style="margin-bottom:40px;">
-    <h2>Why Choose TVS Raider?</h2>
-    <p>
-      TVS Raider is ideal for riders who want a stylish and powerful motorcycle
-      for daily commuting without compromising on comfort or fuel efficiency.
-      Its modern features, strong engine and sporty appeal make it one of the
-      most popular 125cc motorcycles in India.
-    </p>
-  </section>
-
-  <!-- CTA -->
-  <section style="padding:30px;background:#f5f7fb;border-radius:12px;">
-    <h3>Interested in TVS Raider?</h3>
-    <p>Visit Tirumala TVS, Bidarahalli or contact us for best offers and test ride.</p>
-    <a href="../contacts.html"
-       style="display:inline-block;margin-top:10px;padding:12px 24px;background:#0b4fd8;color:#fff;border-radius:6px;text-decoration:none;">
-      Enquire Now
-    </a>
-  </section>
-
-</main>
-
-<!-- FOOTER -->
-<footer style="border-top:1px solid #e5e7eb;margin-top:40px;">
-  <div style="max-width:1200px;margin:auto;padding:20px 16px;text-align:center;">
-    © 2026 Tirumala TVS. All rights reserved.
-  </div>
-</footer>
+    <div class="sticky-cta">
+        <a href="../contacts.html" class="action-btn" style="width: 100%; max-width: 300px; text-align: center;">📅 Book Test Ride</a>
+        <a href="https://wa.me/919964946512?text=Interested in TVS Raider" class="action-btn" style="background: #25D366; color: white; width: 100%; max-width: 300px; text-align: center;">💬 WhatsApp Us</a>
+    </div>
 
 </body>
 </html>
